--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -102,63 +102,40 @@
 
           <section class="thumbnail-and-btn">
             <button id="first-step-btn">
-              <img
-                id="first-step-img"
-                src="https://rmiteduau-my.sharepoint.com/personal/s3912871_student_rmit_edu_au/Documents/UX%20assignment%20two%20thumbnail%20timestamps/Step%201%20materials.png"
-                alt="FirstStep"
-              />
+              <img id="first-step-img" src="step 1.png" alt="FirstStep" />
             </button>
             <h3>Material overview</h3>
 
             <button id="second-step-btn">
-              <img
-                id="second-step-img"
-                src="https://rmiteduau-my.sharepoint.com/personal/s3912871_student_rmit_edu_au/Documents/UX%20assignment%20two%20thumbnail%20timestamps/Step%202%20pinwheel%20net.png"
-                alt="SecondStep"
-              />
+              <img id="second-step-img" src="step 2.png" alt="SecondStep" />
             </button>
             <h3>Step 1: Cutting out the Pinwheel</h3>
 
             <button id="third-step-btn">
-              <img
-                id="third-step-img"
-                src="https://rmiteduau-my.sharepoint.com/personal/s3912871_student_rmit_edu_au/Documents/UX%20assignment%20two%20thumbnail%20timestamps/Step%203%20folding%20pinwheel.png"
-                alt="ThirdStep"
-              />
+              <img id="third-step-img" src="step 3.png" alt="ThirdStep" />
             </button>
             <h3>Step 2: Folding the PinWheel</h3>
 
             <button id="fourth-step-btn">
-              <img
-                id="fourth-step-img"
-                src="https://rmiteduau-my.sharepoint.com/personal/s3912871_student_rmit_edu_au/Documents/UX%20assignment%20two%20thumbnail%20timestamps/Step%204%20foam%20circle.png"
-                alt="FourthStep"
-              />
+              <img id="fourth-step-img" src="step 4.png" alt="FourthStep" />
             </button>
             <h3>Step 3: Cutting out the foam circle</h3>
 
             <button id="fifth-step-btn">
-              <img
-                id="fifth-step-img"
-                src="https://rmiteduau-my.sharepoint.com/personal/s3912871_student_rmit_edu_au/Documents/UX%20assignment%20two%20thumbnail%20timestamps/Step%205%20assembling%20the%20pinwheel.png"
-                alt="FifthStep"
-              />
+              <img id="fifth-step-img" src="step 5.png" alt="FifthStep" />
             </button>
             <h3>Step 4: Assembling the pinwheel</h3>
 
             <button id="sixth-step-btn">
-              <img
-                id="sixth-step-img"
-                src="https://rmiteduau-my.sharepoint.com/personal/s3912871_student_rmit_edu_au/Documents/UX%20assignment%20two%20thumbnail%20timestamps/Step%206%20Tips%20and%20Tricks.png"
-                alt="sixthStep"
-              />
+              <img id="sixth-step-img" src="step 6.png" alt="sixthStep" />
             </button>
             <h3>Tips and Tricks</h3>
 
             <!-- This is the timestamp section.
           I envisioned that the user will be able to click on the thumbnails to skip to the desired step. 
           I took screenshots of the video and cropped them to the ratio of 19:6, I then uploaded them to my oneDrive and linked them to this website.
-          I'm somewhat worried there may be access issues with the onedrive and the user may not be able to actually view the thumbnail,I will have to ask friends to view this website on their laptops. -->
+          I'm somewhat worried there may be access issues with the onedrive and the user may not be able to actually view the thumbnail,I will have to ask friends to view this website on their laptops.
+          I asked a friend to view the website and the thumbnail images did not show up, so ill just add the images onto the file as theyre not large size-->
           </section>
         </section>
       </section>
