--- a/week9/cssanimation/index.html
+++ b/week9/cssanimation/index.html
@@ -16,8 +16,17 @@
   </head>
 </html>
 <body>
+  <div id="side-drawer">
+    <nav>
+      <ul>
+        <li>Home</li>
+        <li>About</li>
+        <li>Contact</li>
+      </ul>
+    </nav>
+  </div>
   <div class="outer">
-    <button>click me</button>
+    <button id="drawer-button">click me</button>
   </div>
   <div class="outer">
     <svg
@@ -42,5 +51,17 @@
         fill="#66A9F7"
       />
     </svg>
+  </div>
+  <div class="outer">
+    <!-- <div id="box">
+      <h1>
+        boxing day sale!
+      </h1> -->
+    <!-- </div> -->
+      <div id="spinner"></div>
+    </div>
+    <div class="outer">
+  
+    </div>
   </div>
 </body>
