--- a/week10/index.html
+++ b/week10/index.html
@@ -36,10 +36,38 @@
         <p>more about me</p>
       </div>
     </div>
-    <div class="outer">block 1</div>
-    <div class="outer">2</div>
-    <div class="outer">3</div>
-    <div class="outer">4</div>
+    <div class="outer" id="purple-box" draggable="true">purple box</div>
+    <div class="outer" id="drop-box">drop box</div>
+    <div id="scroll-content">
+      <div id="long-text">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat
+        reprehenderit alias quos itaque modi nobis eaque similique obcaecati
+        accusamus doloribus quam mollitia nam amet inventore voluptate adipisci,
+        blanditiis distinctio! Cum nemo nam laboriosam impedit nobis modi quas
+        vitae accusamus doloribus. accusamus doloribus quam mollitia nam amet
+        inventore voluptate adipisci, blanditiis distinctio! Cum nemo nam
+        laboriosam impedit nobis modi quas vitae accusamus doloribus. accusamus
+        doloribus quam mollitia nam amet inventore voluptate adipisci,
+        blanditiis distinctio! Cum nemo nam laboriosam impedit nobis modi quas
+        vitae accusamus doloribus. accusamus doloribus quam mollitia nam amet
+        inventore voluptate adipisci, blanditiis distinctio! Cum nemo nam
+        laboriosam impedit nobis modi quas vitae accusamus doloribus.
+      </div>
+    </div>
+    <div class="outer">
+      <div class="button-container">
+        <button id="hscroll-button">Get horizontal scroll position</button>
+        <span id="hscroll">0</span>
+        <button id="vscroll-button">Get vertical scroll position</button>
+        <span id="vscroll">0</span>
+        <button id="hscroll150-button">Scroll 150px horizontally</button>
+        <button id="vscroll300-button">Scroll 300px vertically</button>
+        <button id="wvscroll-button">
+          Get Window vertical scroll position
+        </button>
+        <span id="wvscroll">0</span>
+      </div>
+    </div>
     <footer id="bottom">
       <button id="top-button">go to top</button>
     </footer>
