--- a/assignment3/index.html
+++ b/assignment3/index.html
@@ -9,9 +9,12 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="container">
+    <div class="outer"></div>
+    <div class="outer"></div>
+    <div class="outer"></div>
+    <!-- <div class="container">
       <div id="sticky-note" draggable="true"></div>
-    </div>
+    </div> -->
   </body>
   <script src="script.js" defer></script>
 </html>
