--- a/assignment3/index.html
+++ b/assignment3/index.html
@@ -6,12 +6,24 @@
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
 
-    <title>Document</title>
+    <title>Assignment 3 drag and drop</title>
   </head>
   <body>
-    <div class="outer"></div>
-    <div class="outer"></div>
-    <div class="outer"></div>
+    <div class="swim-lane">
+      <h1>To do</h1>
+      <p class="task" draggable="true">paper protoype</p>
+      <p class="task" draggable="true">test scenario</p>
+    </div>
+
+    <div class="swim-lane">
+      <h1>In progress</h1>
+      <p class="task" draggable="true">sketch out wireflow</p>
+    </div>
+    <div class="swim-lane">
+      <h1>Done</h1>
+      <p class="task" draggable="true">market research</p>
+      <p class="task" draggable="true">user mapping</p>
+    </div>
     <!-- <div class="container">
       <div id="sticky-note" draggable="true"></div>
     </div> -->
