sticky note wip

--- a/assignment3/index.html
+++ b/assignment3/index.html
@@ -19,6 +19,14 @@
           <span class="close"> x </span>
           <textarea placeholder="Write Content"></textarea>
         </div>
+        <div class="sticky-note" draggable="true">
+          <span class="close"> x </span>
+          <textarea placeholder="Write Content"></textarea>
+        </div>
+        <div class="sticky-note" draggable="true">
+          <span class="close"> x </span>
+          <textarea placeholder="Write Content"></textarea>
+        </div>
       </div>
     </div>
     <div>
