sticky note wip

--- a/assignment3/index.html
+++ b/assignment3/index.html
@@ -10,22 +10,26 @@
   </head>
   <body>
     <div class="container">
-      <form action="">
+      <!-- <form action="">
         <input type="color" id="color" value="#e6b905" />
         <button id="create-btn">+</button>
-      </form>
+      </form> -->
       <div id="list">
         <div class="sticky-note" draggable="true">
           <span class="close"> x </span>
-          <textarea placeholder="Write Content"></textarea>
+          <p>ingredient subsititution?</p>
         </div>
         <div class="sticky-note" draggable="true">
           <span class="close"> x </span>
-          <textarea placeholder="Write Content"></textarea>
+          <p>recipe app</p>
         </div>
         <div class="sticky-note" draggable="true">
           <span class="close"> x </span>
-          <textarea placeholder="Write Content"></textarea>
+          <p>portion sizes?</p>
+        </div>
+        <div class="sticky-note" draggable="true">
+          <span class="close"> x </span>
+          <p>healthy eating!</p>
         </div>
       </div>
     </div>
