--- a/assignment3/index.html
+++ b/assignment3/index.html
@@ -9,35 +9,35 @@
     <title>Assignment 3 drag and drop</title>
   </head>
   <body>
-    <div class="container">
+    <div id="container">
       <!-- <form action="">
         <input type="color" id="color" value="#e6b905" />
         <button id="create-btn">+</button>
       </form> -->
       <div id="list">
         <div class="sticky-note" draggable="true">
-          <span class="close"> x </span>
+          <!-- <span class="close"> </span> -->
           <p>ingredient subsititution?</p>
         </div>
         <div class="sticky-note" draggable="true">
-          <span class="close"> x </span>
+          <!-- <span class="close"> </span> -->
           <p>recipe app</p>
         </div>
         <div class="sticky-note" draggable="true">
-          <span class="close"> x </span>
+          <!-- <span class="close"></span> -->
           <p>portion sizes?</p>
         </div>
         <div class="sticky-note" draggable="true">
-          <span class="close"> x </span>
+          <!-- <span class="close"> </span> -->
           <p>healthy eating!</p>
         </div>
       </div>
     </div>
     <div>
-      <form id="todo-form">
+      <!-- <form id="todo-form">
         <input type="text" placeholder="new task" id="todo-input" />
         <button type="submit" id="submit-btn">Add +</button>
-      </form>
+      </form> -->
       <div class="lanes">
         <div class="swim-lane" id="todo-lane">
           <h1>To do</h1>
